@@ -1,3 +1,8 @@
+# Unreleased
+- Feature: Added phishlet ability to intercept HTTP requests and return custom responses via new `intercept` section.
+- Fixed: Fixed HTTP status code response for Javascript redirects.
+- Fixed: Redirects now only happen on `text/html` pages with valid HTML content.
+
 # 3.1.0
 - Feature: Listening IP and external IP can now be separated with `config ipv4 bind <bind_ipv4_addr>` and `config ipv4 external <external_ipv4_addr>` to help with properly setting up networking.
 - Fixed: Session cookies (cookies with no expiry date set) are now correctly captured every time. There is no need to specify `:always` key modifier for `auth_tokens` to capture them.
